--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit_core.buildapi"
 name = "py_ad_principal_jhallford"
 version = "0.0.1"
 authors = [{"name"="Jason Hallford", "email"="jason.hallford@gmail.com"}]
-description = "A Python package for authenticating users (user principals) via a Microsoft Active Directory-compatible domain."
+description = "A Python package for authenticating users (more formally called *principals*) via a Microsoft Active Directory (AD) domain controller."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
