--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
-    "Operating System :: Linux",
+    "Operating System :: POSIX :: Linux",
 ]
 keywords = [
     "active directory", 
