--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "py_ad_principal"
-version = "0.1.1"
-authors = [{"name"="Jason Hallford", "email"="jason.hallford@gmail.com"}]
+version = "0.1.3"
+authors = [{"name"="Jason Hallford"}]
 description = "A Python package for authenticating users (more formally called principals) via a Microsoft Active Directory (AD) domain controller."
 readme = "README.md"
 requires-python = ">=3.11"
